--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.2"
 services:
   node:
-    image: restaurant:v1.0.0
+    image: restaurant:v1.0.57
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
@@ -18,7 +18,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - type: bind
+      - type: volume
         source: mongodb
         target: /bitnami/mongodb
     environment:
