--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.2"
 services:
   node:
-    image: restaurant:v1.0.57
+    image: 13120107/restaurant:v1.0.57
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
